<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:contentDescription="@string/featuredsection"
                android:id="@+id/featured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/featuredsection"
                />

            <ImageView
                android:contentDescription="@string/discover_menswear"
                android:id="@+id/discovermenswear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_below="@id/featured"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/discovermenswear" />

            <RelativeLayout
                android:id="@+id/menswear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discovermenswear"
                android:padding="16dp"
                android:layout_marginHorizontal="10dp">

                <ImageButton
                    android:contentDescription="@string/mens_tops"
                    android:id="@+id/tops"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/topsm" />
                <ImageButton
                    android:contentDescription="@string/mens_bottoms"
                    android:id="@+id/bottoms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/tops"
                    app:srcCompat="@drawable/bottomsm" />
                <ImageButton
                    android:contentDescription="@string/mens_outerwear"
                    android:id="@+id/outerwear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/bottoms"
                    app:srcCompat="@drawable/outerwearm" />
                <ImageButton
                    android:contentDescription="@string/mens_footwear"
                    android:id="@+id/footwear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tops"
                    app:srcCompat="@drawable/footwearm" />
                <ImageButton
                    android:contentDescription="@string/mens_loungewear"
                    android:id="@+id/loungewear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/bottoms"
                    android:layout_toEndOf="@id/footwear"
                    app:srcCompat="@drawable/loungewearm" />
                <ImageButton
                    android:contentDescription="@string/mens_accessories"
                    android:id="@+id/accessories"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/outerwear"
                    android:layout_toEndOf="@id/loungewear"
                    app:srcCompat="@drawable/accessoriesm" />
            </RelativeLayout>
            <ImageView
                android:contentDescription="@string/discover_womenswear"
                android:id="@+id/discoverwomenswear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:layout_below="@id/menswear"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/discoverwomenswear" />

            <RelativeLayout
                android:id="@+id/womenswear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discoverwomenswear"
                android:padding="16dp"
                android:layout_marginHorizontal="10dp">

                <ImageButton
                    android:contentDescription="@string/womens_tops"
                    android:id="@+id/topsw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/topsw" />
                <ImageButton
                    android:contentDescription="@string/womens_bottoms"
                    android:id="@+id/bottomsw"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/topsw"
                    app:srcCompat="@drawable/bottomsw" />
                <ImageButton
                    android:contentDescription="@string/womens_outerwear"
                    android:id="@+id/outerwearw"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/bottomsw"
                    app:srcCompat="@drawable/outerwearw" />
                <ImageButton
                    android:contentDescription="@string/womens_footwear"
                    android:id="@+id/footwearw"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/topsw"
                    app:srcCompat="@drawable/footwearw" />
                <ImageButton
                    android:contentDescription="@string/womens_bags"
                    android:id="@+id/bagsw"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/bottomsw"
                    android:layout_toEndOf="@id/footwearw"
                    app:srcCompat="@drawable/bagsw" />
                <ImageButton
                    android:contentDescription="@string/womens_accessories"
                    android:id="@+id/accessoriesw"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/outerwearw"
                    android:layout_toEndOf="@id/bagsw"
                    app:srcCompat="@drawable/accessoriesw" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

            <!--<ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="300dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/menswear" />-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>